// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-dNLxif jHCyHM"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-kIPQKe ezGIEH fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-dVhcbM hDIpsI"
  >
    <div
      class="sc-eqIVtm jKELNl"
    >
      <div
        class="sc-fAjcbJ gZlBNz"
      >
        <div
          class="sc-cHGsZl sc-kgAjT cZlUSX"
        >
          ERROR
        </div>
        <h4
          class="sc-kvZOFW hOyfyC"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-caSCKo jjNSwx"
      >
        <pre
          class="sc-jbKcbu jkTfGk"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-kjoXOD gpqOLe"
      >
        <a
          class="sc-gisBJw imfIcQ"
        >
          <i
            class="sc-kfGgVZ cavWqY fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-dVhcbM hDIpsI"
  >
    <div
      class="sc-eqIVtm jKELNl"
    >
      <div
        class="sc-fAjcbJ gZlBNz"
      >
        <div
          class="sc-cHGsZl sc-kgAjT cZlUSX"
        >
          ERROR
        </div>
        <h4
          class="sc-kvZOFW hOyfyC"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-caSCKo jjNSwx"
      >
        <pre
          class="sc-jbKcbu jkTfGk"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
